# mako

./: .gitignore  .ignore  Makefile  README.md  pyproject.toml
mako/: app.css  app.tcss  config.py  custom_syntax.py  diff_script.sh  editor.py  footer.py  formatter.py  fuzzy_finder.py  horizontal_layout.css  logger.py  main.py  terminal_emulator.py  tree_sitter.py  util.py
tests/: test.json  test.py
